--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	Still interested in hiring me?<br>
 	<br>
 <!-- 	button -->
-	<a href="https://github.com/leonardojpeg"><button type="button" class="btn btn-primary">Go down the rabbit hole</button></a>
+	<a href="https://github.com/leonardojpeg/studious-eureka"><button type="button" class="btn btn-primary">Go down the rabbit hole</button></a>
 </em></p></code></div>
 </body>
 </html>
