--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 	<br>
 <!-- 	button -->
 	<a href="https://github.com/leonardojpeg/studious-eureka"><button type="button" class="btn btn-primary">Go down the rabbit hole</button></a>
-</em></p></code></div>
+</em></code></p></div>
 </body>
 </html>
