--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <!-- VIDEO  -->
 <div class="footer-style"><iframe width="1024" height="577" src="https://www.youtube.com/embed/P7Bw2a5urLM?autoplay=1&loop=1&playlist=P7Bw2a5urLM" title="YouTube video player" frameborder="0" allow=" accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/P7Bw2a5urLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <!-- gap -->
 <div class="horizontalgap" style="height:50px"></div>
 <!-- footer -->
